iam/openldap/minimal-ldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap
  labels:
    app: ldap
spec:
  type: "ClusterIP"
  ports:
  - name: php-http 
    port: 8080
    protocol: TCP
    targetPort: 80
  - name: php-https 
    port: 8443
    protocol: TCP
    targetPort: 443
  - name: ldap-https 
    port: 636
    protocol: TCP
    targetPort: 636
  - name: ldap-http
    port: 389
    protocol: TCP
    targetPort: 389
  selector:
    app: ldap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap
  labels:
    app: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
        - image: osixia/phpldapadmin:latest
          name: phpldapadmin
          ports:
            - containerPort: 80
              name: http 
            - containerPort: 443
              name: https 
        - name: ldap
          #image: bitnami/openldap:stable
          #image: osixia/openldap:stable
          image: noenv/openldap:2.6.3
          volumeMounts:
            - name: ldap-data
              mountPath: /var/lib/ldap
            - name: ldap-config
              mountPath: /etc/ldap/slapd.d
            - name: ldap-certs
              mountPath: /container/service/slapd/assets/certs
          ports:
            - containerPort: 389
              name: http 
            - containerPort: 636
              name: https 
      volumes:
        - name: ldap-data
          persistentVolumeClaim:
            claimName: ldap-data-pvc
        - name: ldap-config
          persistentVolumeClaim:
            claimName: ldap-config-pvc
        - name: ldap-certs
          persistentVolumeClaim:
            claimName: ldap-certs-pvc
